fix changes collapsing/expanding

--- a/root/static/less/release.less
+++ b/root/static/less/release.less
@@ -60,7 +60,7 @@
     }
 
     &.collapsable {
-        #metacpan_last-changes-toggle {
+        .changes-toggle {
             display: inline-block;
         }
 
@@ -70,18 +70,18 @@
             .show-more { display: inline }
             .hide-more { display: none }
 
-            #metacpan_last-changes-container {
+            .changes-content {
                 overflow: hidden;
                 max-height: 20.02em;
             }
         }
     }
 
-    #metacpan_last-changes-toggle {
+    .changes-toggle {
         display: none;
     }
 
-    #metacpan_last-changes-container {
+    .changes-content {
         margin-bottom: 0.5em;
     }
     padding-bottom: 0.5em;
